# erg-dashboard

erg-dashboard-backend/: .gitignore  app.py  control_worker.py  pyproject.toml  stat_worker.py
erg-dashboard-frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
erg-dashboard-frontend/public/: index.html
erg-dashboard-frontend/src/: App.svelte  Stats.svelte  index.tsx
erg-dashboard-frontend/src/components/: App.tsx  Charts.tsx  Controller.tsx  Stats.tsx
erg-dashboard-frontend/src/context/: socket.ts
erg-dashboard-frontend/src/shared/: config.template.ts  stats.types.ts  theme.ts
