[tool.poetry]
name = "erg-dashboard-backend"
version = "0.1.0"
description = ""
authors = ["geoffreywwang <geoffreywwang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
gevent = "^21.1.2"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
